# Wasabi

./: .gitignore  README.md  config.jsonc  design_notes.md
electronics/driverBO/: picowasabi-B_Cu.gbr  picowasabi-B_Mask.gbr  picowasabi-B_Paste.gbr  picowasabi-B_Silkscreen.gbr  picowasabi-Edge_Cuts.gbr  picowasabi-F_Cu.gbr  picowasabi-F_Mask.gbr  picowasabi-F_Paste.gbr  picowasabi-F_Silkscreen.gbr  picowasabi-NPTH.drl  picowasabi-PTH.drl  picowasabi-job.gbrjob
electronics/mainBoard/: wasabi-B_Cu.gbr  wasabi-B_Mask.gbr  wasabi-B_Paste.gbr  wasabi-B_Silkscreen.gbr  wasabi-Edge_Cuts.gbr  wasabi-F_Cu.gbr  wasabi-F_Mask.gbr  wasabi-F_Paste.gbr  wasabi-F_Silkscreen.gbr  wasabi-NPTH.drl  wasabi-PTH.drl  wasabi-job.gbrjob
electronics/mainBoard_kicad/: fp-lib-table  mainBoard_kicad.kicad_pcb  mainBoard_kicad.kicad_prl  mainBoard_kicad.kicad_pro  mainBoard_kicad.kicad_sch
instance/: WasabiData.sqlite
machine_controller/: CMakeLists.txt  accel_timing_calc.typ  coms_protocol.cpp  coms_protocol.hpp  dma_uart.cpp  dma_uart.hpp  fiveBar.cpp  fiveBar.hpp  main.cpp  mmain.cpp  motors.cpp  motors.hpp  old.cpp  pseudoGcode.cpp  test.cpp  testmain.cpp  uart_dma_lwv.cpp
main/: __init__.py  agent.py  db.py  finder.py  home.py  machineTranslator.py  programmer.py  schema.sql  slicer.py  test.py
pico/motcon/: CMakeLists.txt  motCon.c  motConv1.c
wasabi_app/: config.json  install.sh  launch.py  package-lock.json  package.json  package.json-0.0.0.tgz  requirements.txt  wbiDB.db
wasabi_breakoutBoard/: _autosave-wasabi.kicad_pcb  wasabi.kicad_pcb  wasabi.kicad_pro  wasabi.kicad_sch
(+98 files in other folders)
